@@ -7,6 +7,7 @@ CHANGELOG
 
 = 2.0.6 =
 -------------------------------------------------
+* Improved message about required units.
 
 = 2.0.5 =
 -------------------------------------------------
